[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/JumpAnimationFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/nodes/PlayerEvents.gd" type="Script" id=2]

[node name="PlayerEvents" type="Node2D"]
script = ExtResource( 2 )

[node name="JumpEvent" type="Node2D" parent="."]

[node name="JumpAnimationRight" type="AnimatedSprite" parent="JumpEvent"]
position = Vector2( 32, 32 )
frames = ExtResource( 1 )
animation = "jump"

[node name="JumpAnimationLeft" type="AnimatedSprite" parent="JumpEvent"]
position = Vector2( -32, 32 )
frames = ExtResource( 1 )
animation = "jump"
flip_h = true
